--- a/MedicalLinkUpdate/MedicalLinkUpdate.csproj
+++ b/MedicalLinkUpdate/MedicalLinkUpdate.csproj
@@ -35,7 +35,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Martin-Berube-Flat-Animal-Crab.ico</ApplicationIcon>
+    <ApplicationIcon>Logo_VT_1.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Security">
@@ -100,6 +100,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Logo_VT_1.ico" />
     <Content Include="Martin-Berube-Flat-Animal-Crab.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
